--- a/source/themes/custom/gearwrench_au/styles/libraries/view/new-products.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/view/new-products.scss
@@ -78,6 +78,27 @@
     .form-checkboxes > ul {
       margin-left: 0;
       padding-left: 0;
+
+      ul {
+        padding-left: 1.5rem;
+        margin-top: -0.25rem
+      }
+
+      li > ul li:first-child {
+        position: relative;
+
+        &::before {
+          background-image: url('../../../icons/l-shaped-line.svg');
+          background-size: 12px 20px;
+          content: '';
+          display: inline-block;
+          position: absolute;
+          top: -8px;
+          left: -1rem;
+          width: 12px;
+          height: 20px;
+        }
+      }
     }
 
     ul li {
