moved heiarchy css for mobile and desktop

--- a/source/themes/custom/crescenttool_au/styles/libraries/node/full--product-brand.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/node/full--product-brand.scss
@@ -126,10 +126,59 @@
       }
     }
 
+    .view-filters {
+      .form-item {
+        margin-bottom: .75rem !important;
+      }
+
+      .form-checkboxes li {
+        list-style: none;
+      }
+
+      .form-checkboxes > ul {
+        margin-left: 0;
+        padding-left: 0;
+
+        ul {
+          padding-left: 1.5rem;
+          margin-top: -0.25rem;
+        }
+
+        li > ul li:first-child {
+          position: relative;
+
+          &::before {
+            background-image: url('../../../icons/l-shaped-line.svg');
+            background-size: 12px 20px;
+            content: '';
+            display: inline-block;
+            position: absolute;
+            top: -8px;
+            left: -1rem;
+            width: 12px;
+            height: 20px;
+          }
+        }
+      }
+
+      .form-checkboxes input[type='checkbox'] + label:before {
+        top: 50%;
+        transform: translateY(-50%);
+      }
+
+      .form-checkboxes input[type='checkbox'] + label:after {
+        top: 50%;
+        transform: translateY(-50%);
+      }
+
+      .form-checkboxes input[type='checkbox']:not(:checked) + label:before {
+        background-color: transparent;
+      }
+    }
+
     @include media('<md') {
       .view-filters {
         display: none;
-        grid-column: 1;
 
         .fieldset-legend {
           display: none;
@@ -273,50 +322,6 @@
           font-size: rem(14px);
           margin-bottom: 1rem !important;
           width: 100%;
-        }
-
-        .form-checkboxes li {
-          list-style: none;
-        }
-
-        .form-checkboxes > ul {
-          margin-left: 0;
-          padding-left: 0;
-
-          ul {
-            padding-left: 1.5rem;
-            margin-top: -0.25rem;
-          }
-
-          li > ul li:first-child {
-            position: relative;
-
-            &::before {
-              background-image: url('../../../icons/l-shaped-line.svg');
-              background-size: 12px 20px;
-              content: '';
-              display: inline-block;
-              position: absolute;
-              top: -8px;
-              left: -1rem;
-              width: 12px;
-              height: 20px;
-            }
-          }
-        }
-
-        .form-checkboxes input[type='checkbox'] + label:before {
-          top: 50%;
-          transform: translateY(-50%);
-        }
-
-        .form-checkboxes input[type='checkbox'] + label:after {
-          top: 50%;
-          transform: translateY(-50%);
-        }
-
-        .form-checkboxes input[type='checkbox']:not(:checked) + label:before {
-          background-color: transparent;
         }
       }
     }
