VYRKCATG-200: Setup the New Products filters styles for CT AU.

--- a/source/themes/custom/gearwrench_au/styles/libraries/view/new-products.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/view/new-products.scss
@@ -82,6 +82,7 @@
 
     .form-checkboxes > ul {
       margin-left: 0;
+      margin-top: 0;
       padding-left: 0;
 
       ul {
@@ -157,16 +158,6 @@
       font-size: rem(14px);
       margin-bottom: 1rem !important;
       width: 100%;
-    }
-
-    .form-checkboxes input[type='checkbox'] + label:before {
-      top: 50%;
-      transform: translateY(-50%);
-    }
-
-    .form-checkboxes input[type='checkbox'] + label:after {
-      top: 50%;
-      transform: translateY(-50%);
     }
 
     .form-checkboxes input[type='checkbox']:not(:checked) + label:before {
