added padding to product brand css for filter check box checked

--- a/source/themes/custom/crescenttool_au/styles/libraries/node/full--product-brand.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/node/full--product-brand.scss
@@ -169,6 +169,7 @@
       .form-checkboxes input[type='checkbox'] + label:after {
         top: 50%;
         transform: translateY(-50%);
+        padding-top: rem(4px);
       }
 
       .form-checkboxes input[type='checkbox']:not(:checked) + label:before {
