--- a/source/themes/custom/gearwrench_au/styles/libraries/view/new-products.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/view/new-products.scss
@@ -160,6 +160,17 @@
       width: 100%;
     }
 
+    .form-checkboxes input[type='checkbox'] + label:before {
+      top: 50%;
+      transform: translateY(-50%);
+    }
+
+    .form-checkboxes input[type='checkbox'] + label:after {
+      top: 50%;
+      transform: translateY(-50%);
+      padding-top: rem(4px);
+    }
+
     .form-checkboxes input[type='checkbox']:not(:checked) + label:before {
       background-color: transparent;
     }
