--- a/source/themes/custom/gearwrench_au/styles/libraries/node/full--product-category.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/node/full--product-category.scss
@@ -136,6 +136,7 @@
           height: 3rem;
           max-width: 100%;
           order: 1;
+          margin-bottom: rem(20px);
         }
 
         .mobile-filter-header-inner {
