--- a/source/themes/custom/gearwrench_au/styles/libraries/view/new-products.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/view/new-products.scss
@@ -209,6 +209,7 @@
         height: 3rem;
         max-width: 100%;
         order: 3;
+        margin-bottom: rem(20px);
       }
 
       .mobile-filter-header-inner {
