Changed brand pager breakpoint, updated grid on media pages and fixed grid on media and new products

--- a/source/themes/custom/crescenttool_au/styles/libraries/node/full--product-brand.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/node/full--product-brand.scss
@@ -14,13 +14,12 @@
  * Component
  */
 .node--type-product-brand.node--view-mode-full .node__content {
-
   .pager {
-    grid-column-start: 2;
+    grid-column-start: 1;
     grid-column-end: 4;
 
-    @include media('<md') {
-      grid-column-start: 1;
+    @include media('>=md') {
+      grid-column-start: 2;
     }
   }
 
