changed css filter overflow to hidden for x, added js to fix initial open accordion click

--- a/source/themes/custom/crescenttool_au/styles/libraries/view/media-pages.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/view/media-pages.scss
@@ -240,7 +240,7 @@
       grid-row-end: 5;
       padding-right: rem(24px);
       height: 100vh;
-      overflow: auto scroll;
+      overflow: hidden scroll;
 
       scrollbar-width: thin; // sass-lint:disable-line no-misspelled-properties
       scrollbar-color: $primary-red transparent; // sass-lint:disable-line no-misspelled-properties
