--- a/source/themes/custom/crescenttool_au/styles/libraries/view/new-products.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/view/new-products.scss
@@ -52,7 +52,7 @@
     display: none;
     grid-column: 1;
     height: 100vh;
-    overflow: auto scroll;
+    overflow: hidden scroll;
 
     scrollbar-width: thin; // sass-lint:disable-line no-misspelled-properties
     scrollbar-color: $primary-red transparent; // sass-lint:disable-line no-misspelled-properties
