--- a/source/themes/custom/gearwrench_au/styles/libraries/node/full--product-category.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/node/full--product-category.scss
@@ -87,7 +87,7 @@
       display: none;
       grid-column: 1;
       height: 100vh;
-      overflow: auto scroll;
+      overflow: hidden scroll;
 
       scrollbar-width: thin; // sass-lint:disable-line no-misspelled-properties
       scrollbar-color: $primary-orange transparent; // sass-lint:disable-line no-misspelled-properties
@@ -113,7 +113,7 @@
         box-shadow: 0 0 3rem 5rem rgba(0, 0, 0, 0.6);
         bottom: 0;
         left: 15vw;
-        overflow: scroll;
+        overflow: hidden scroll;
         padding-top: 75px;
         padding-left: 1rem;
         position: fixed;
