--- a/source/themes/custom/gearwrench_au/styles/libraries/region/header.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/region/header.scss
@@ -1197,7 +1197,7 @@ $mobile-menu-item-button-height: 7rem;
  * Offset page since header is fixed.
  */
 .page {
-  padding-top: $header-height-large;
+  padding-top: $header-height;
 
   @include media('<=lg-plus') {
     padding-top: $header-height;
