added jquery modal to libraries, added modal to node product full template, added js and css

--- a/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
@@ -123,7 +123,6 @@ $tabs-border-width-active: rem(5px);
     }
 
     .product-detail-content-container {
-
       @include media('>sm') {
         padding-top: rem(32px);
       }
@@ -134,7 +133,6 @@ $tabs-border-width-active: rem(5px);
     }
 
     .product-detail-content-container__title {
-
       h1 {
         @include media('>md') {
           margin: 0;
@@ -538,6 +536,65 @@ $tabs-border-width-active: rem(5px);
           color: $black;
           padding-left: 3rem;
         }
+      }
+    }
+  }
+}
+
+.page-node-type-product {
+  .jquery-modal {
+    &.blocker {
+      z-index: 11;
+    }
+
+    .modal {
+      max-width: rem(925px);
+      height: rem(625px);
+      padding: 15px 50px;
+    }
+
+    a.close-modal {
+      top: rem(25px);
+      right: rem(25px);
+      z-index: 10;
+    }
+
+    .product-detail-modal-slider__button {
+      background-color: $secondary-black;
+      background-size: rem(10px) rem(16px);
+      border: 1px solid $secondary-black;
+      height: rem(48px);
+      width: rem(48px);
+      margin: 0;
+      padding: 0;
+      opacity: 1;
+      box-shadow: 0 8px 28px -6px rgba(0, 0, 0, 0.24), 0 18px 88px -4px rgba(0, 0, 0, 0.1);
+      transform: translateY(-50%);
+
+      &:hover {
+        background-color: $primary-orange;
+        border-color: $primary-orange;
+      }
+
+      &.product-detail-modal-slider__button-prev {
+        background-image: url('../../../icons/chevron-left-molten-orange.svg');
+
+        &:hover {
+          background-image: url('../../../icons/chevron-left-black.svg');
+        }
+      }
+
+      &.product-detail-modal-slider__button-next {
+        background-image: url('../../../icons/chevron-right-molten-orange.svg');
+
+        &:hover {
+          background-image: url('../../../icons/chevron-right-black.svg');
+        }
+      }
+
+      &[aria-disabled='true'] {
+        background-color: $gray-30;
+        border-color: $gray-30;
       }
     }
   }
