--- a/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
@@ -549,14 +549,44 @@ $tabs-border-width-active: rem(5px);
 
     .modal {
       max-width: rem(925px);
-      height: rem(625px);
-      padding: 15px 50px;
+      max-height: rem(625px);
+      padding: 20px;
+      border-radius: unset;
+      width: 100%;
+
+      .media__image {
+        max-height: 545px;
+        max-width: 295px;
+        margin: 0 auto;
+      }
+
+      @include media('>=md') {
+        padding: 40px;
+
+        .media__image {
+          max-height: 545px;
+          max-width: 845px;
+        }
+      }
     }
 
     a.close-modal {
-      top: rem(25px);
-      right: rem(25px);
+      &:not(.icon-remove) {
+        display: none;
+      }
+
+      top: 0;
+      right: 0;
+      color: $secondary-black;
+      background-image: url('../../../icons/close.svg');
+      width: 15px;
+      height: 15px;
       z-index: 10;
+
+      @include media('>=md') {
+        width: 23px;
+        height: 23px;
+      }
     }
 
     .product-detail-modal-slider__button {
@@ -578,17 +608,33 @@ $tabs-border-width-active: rem(5px);
 
       &.product-detail-modal-slider__button-prev {
         background-image: url('../../../icons/chevron-left-molten-orange.svg');
+        left: 0;
+        bottom: 0;
+        top: unset;
+        transform: unset;
 
         &:hover {
           background-image: url('../../../icons/chevron-left-black.svg');
+        }
+
+        @include media('>=md') {
+          left: 30px;
         }
       }
 
       &.product-detail-modal-slider__button-next {
         background-image: url('../../../icons/chevron-right-molten-orange.svg');
+        right: 0;
+        bottom: 0;
+        top: unset;
+        transform: unset;
 
         &:hover {
           background-image: url('../../../icons/chevron-right-black.svg');
+        }
+
+        @include media('>=md') {
+          right: 30px;
         }
       }
 
