added slide zindex

--- a/source/themes/custom/crescenttool_au/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/crescenttool_au/styles/libraries/node/full--product.scss
@@ -594,6 +594,12 @@ $tabs-border-width-active: rem(5px);
       }
     }
 
+    .product-detail-modal-slider {
+      .swiper-slide {
+        z-index: 9;
+      }
+    }
+
     .product-detail-modal-slider__button {
       background: none;
       color: $primary-red;
