--- a/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
@@ -597,6 +597,12 @@ $tabs-border-width-active: rem(5px);
       }
     }
 
+    .product-detail-modal-slider {
+      .swiper-slide {
+        z-index: 9;
+      }
+    }
+
     .product-detail-modal-slider__button {
       background-color: $secondary-black;
       background-size: rem(10px) rem(16px);
