changed modal video top and bottom padding on larger breakpoints

--- a/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
+++ b/source/themes/custom/gearwrench_au/styles/libraries/node/full--product.scss
@@ -607,10 +607,12 @@ $tabs-border-width-active: rem(5px);
       .swiper-slide {
         z-index: 9;
 
-        .media--type-remote-video {
-          background-color: $white;
-          padding-bottom: 25%;
-          padding-top: 25%;
+        @include media('<md') {
+          .media--type-remote-video {
+            background-color: $white;
+            padding-bottom: 25%;
+            padding-top: 25%;
+          }
         }
       }
     }
