added print icon, stylesheet, and updated product full twig

--- a/docroot/themes/custom/crescenttool_au/templates/node/node--product--full.html.twig
+++ b/docroot/themes/custom/crescenttool_au/templates/node/node--product--full.html.twig
@@ -142,6 +142,12 @@
             <!--Price Spider Rating widget goes here-->
             <div class="node__buy-now-button ps-widget" ps-sku="{{sku}}"></div>
           </div>
+
+          <div class="product-detail-content-container__social">
+            <div class="product-detail-content-container__print">
+              <span onclick="window.print()">{% include directory ~ '/icons/printer.svg' %}</span>
+            </div>
+          </div>
         </header>
 
         <div class="product-detail-content-container__utility-container">
